# MyEngine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
resources/: primitive.frag
src/: Game.cpp  Game.h  Grid.cpp  Grid.h  Randomizer.h  Tile.cpp  Tile.h  main.cpp
src/Engine/: Program.cpp  Program.h  shader.cpp  shader.h  sprite.cpp  sprite.h  spriteRenderer.cpp  texture.h
src/Engine/Managers/: CollisionManager.cpp  CollisionManager.h  InputManager.cpp  InputManager.h  ResourceManager.cpp  ResourceManager.h
src/Engine/Primitives/: shapeRenderer.cpp  shapeRenderer.h
